<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    android:background="#ffffff"
    tools:context="com.example.nawras.smartroute.Connexion">

    <ViewFlipper
        android:id="@+id/myflipper"
        android:layout_width="335dp"
        android:layout_height="121dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_weight="2.63"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_b" />

    </ViewFlipper>


    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mail"
        android:layout_alignRight="@+id/mail"
        android:layout_centerVertical="true"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword" />



    <Button
        android:id="@+id/btconnection"
        style="@android:style/Widget.Button"
        android:layout_width="149dp"

        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@color/bouton"
        android:elevation="0dp"
        android:fontFamily="serif"


        android:onClick="userLogin"
        android:text="@string/connection"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:visibility="visible" />
    <Button
        android:id="@+id/btinscri"
        style="@android:style/Widget.Button"
        android:layout_width="149dp"

        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@color/black_overlay"
        android:elevation="0dp"
        android:fontFamily="serif"


        android:onClick="retour"
        android:text="@string/inscri"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:visibility="visible" />



</LinearLayout>
